# mango-basic-wrapper

./: Anchor.toml  package.json
programs/castle-mango-wrapper/: Cargo.toml
programs/castle-mango-wrapper/src/: lib.rs
tests/: castle-mango-wrapper.ts
